Feature: DNN input

--- a/Lab.ipynb
+++ b/Lab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "5b179ce6",
    "metadata": {
     "scrolled": false
@@ -30,12 +30,12 @@
     "import matplotlib.pyplot as plt # plot\n",
     "import matplotlib.gridspec as gridspec\n",
     "\n",
-    "from typing import Dict,Any,List"
+    "from typing import Dict,Any,List,Generator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "id": "1c523f73",
    "metadata": {},
    "outputs": [],
@@ -57,6 +57,39 @@
     "    def reviews(self) -> List[Dict[str,Any]]:\n",
     "        return self._reviews\n",
     "    \n",
+    "    def padded_reviews(self, vectorizer: word2vec.Word2Vec, batch_size: int = -1, iterate_forever: bool = False) -> Generator[None,Tuple[np.ndarray,np.ndarray],None]:\n",
+    "        \"\"\"\n",
+    "        Returns all the train reviews in a matrix, padding the sentences so all have the same size\n",
+    "        @param vectorizer      Word2Vec object to convert from word to vector\n",
+    "        @param batch_size      Number of reviews each returned ndarray has. Use -1 if use all the reviews.\n",
+    "        @param iterate_forever If True, it will iterate indefinitely\n",
+    "        @return Generator of ndarray of size (<batch_size>,<max words in review>,<Word2Vec return vector lenght>).\n",
+    "        \"\"\"\n",
+    "        vector_size = vectorizer.wv[0].shape\n",
+    "        reviews = self.review_sentences\n",
+    "        largest_review_size = self.largest_review_size\n",
+    "        if batch_size == -1: batch_size = len(reviews)\n",
+    "        \n",
+    "        offset = 0\n",
+    "        while True:\n",
+    "            reviews_slice = reviews[offset*batch_size:(offset+1)*batch_size]\n",
+    "            r = np.zeros(shape=( len(reviews_slice),largest_review_size,vector_size[-1] ))\n",
+    "            print(r.shape)\n",
+    "            for review_index,review in enumerate(reviews_slice):\n",
+    "                review_offset = largest_review_size-len(review) # will help with the padding\n",
+    "                for word_index,word in enumerate(review):\n",
+    "                    if word in vectorizer.wv: # if not, leave it as 0\n",
+    "                        r[review_index,review_offset+word_index,:] = vectorizer.wv[word]\n",
+    "            \n",
+    "            yield r\n",
+    "            \n",
+    "            offset += 1\n",
+    "            if offset >= len(reviews):\n",
+    "                offset = 0\n",
+    "                \n",
+    "                if not iterate_forever:\n",
+    "                    return\n",
+    "    \n",
     "    @property\n",
     "    def largest_review_size(self) -> int:\n",
     "        # @ref https://stackoverflow.com/a/1582670/9178470\n",
@@ -66,25 +99,9 @@
     "    def review_sentences(self) -> List[str]:\n",
     "        return [x['text'] for x in self._reviews]\n",
     "    \n",
-    "    def makeBoW(self):\n",
-    "        count_vectorizer=CountVectorizer()\n",
-    "        counts=count_vectorizer.fit_transform([\" \".join(x['text']) for x in self._reviews])\n",
-    "        transformer = TfidfTransformer()\n",
-    "        self.BoW=transformer.fit_transform(counts)\n",
-    "        #Posem els scores en un array\n",
-    "        self.scores=np.array([x['score'] for x in self._reviews])\n",
-    "\n",
-    "    def learn(self):\n",
-    "        #To be fit by the student\n",
-    "        learner=MLPClassifier(hidden_layer_sizes=self._hidden_layer, solver='lbfgs', alpha=1e-5, random_state=self._random_state)\n",
-    "        self.model=learner.fit(self.BoW_train,self.scores_train)\n",
-    "        pass\n",
-    "    \n",
-    "    def evaluate(self):\n",
-    "        #Returns RMSE\n",
-    "        print(np.sqrt(sum(np.power(self.scores_test-self.model.predict(self.BoW_test),2))))\n",
-    "        print(confusion_matrix(self.scores_test,np.round(self.model.predict(self.BoW_test))))\n",
-    "        print(classification_report(self.scores_test,np.round(self.model.predict(self.BoW_test))))\n",
+    "    @property\n",
+    "    def num_reviews(self) -> int:\n",
+    "        return len(self._reviews)\n",
     "\n",
     "    def train_word2vec_model(self, size: int, window: int = 5, min_count: int = 5, workers: int = -1) -> word2vec.Word2Vec:\n",
     "        \"\"\"\n",
@@ -122,7 +139,7 @@
     "\n",
     "# global variables\n",
     "WORD2VEC_VECTOR_SIZE = 300\n",
-    "HIDDEN_DIM = 52 # must be a power of 2\n",
+    "INPUT_HIDDEN_DIM = 52 # must be a power of 2\n",
     "\n",
     "# create an inscance of the class\n",
     "SaHandler=SentimentAnalysis('data/Watches_withstopwords.json.gz', random_state=1)"
@@ -224,16 +241,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cluster 0: ['can', 'don', 'doesn', 'didn', 'won', 'isn', 'haven', 'couldn', 'wasn', 'wouldn']\n",
-      "Cluster 1: ['the', 'that', 'but', 'not', 'band', 'than', 'which', 'face', 'other', 'wrist']\n",
-      "Cluster 2: ['i', 'was', 'one', 'had', 'watches', 'me', 'price', 'they', 'bought', 'years']\n",
-      "Cluster 3: ['time', 'only', 'day', 'light', 'there', 'date', 'second', 'set', 'how', 'hand']\n",
-      "Cluster 4: ['water']\n",
-      "Cluster 5: ['a', 'of', 'my', 'with', 'as', 'so', 'at', 'has', 'are', 'would']\n",
-      "Cluster 6: ['to', 'in', 'on', 'or', 'just', 'when', 'out', 'up', 'still', 'off']\n",
-      "Cluster 7: ['it', 'and', 'watch', 'is', 'this', 's', 'very', 'great', 'like', 'good']\n",
-      "Cluster 8: ['have', 'you', 't', 'be', 'if', 'get', 'wear', 'use', 'do', 'buy']\n",
-      "Cluster 9: ['for', 'about', 'after', 'two', 'over', '2', '5', 'few', '3', '1']\n"
+      "Cluster 0: ['the', 'that', 'band', 'which', 'face', 'wrist', 'little', 'small', 'strap', 'case']\n",
+      "Cluster 1: ['on', 'or', 'can', 'when', 'out', 'up', 'off', 'even', 'your', 'never']\n",
+      "Cluster 2: ['time', 'only', 'day', 'light', 'there', 'date', 'second', 'set', 'hand', 'hands']\n",
+      "Cluster 3: ['it', 'and', 'watch', 'is', 'this', 'but', 'not', 's', 'very', 'as']\n",
+      "Cluster 4: ['about', 'after', 'now', 'two', 'over', '2', '5', 'few', '3', 'many']\n",
+      "Cluster 5: ['battery', 'batteries']\n",
+      "Cluster 6: ['i', 'was', 'had', 'me', 'bought', 'years', 'am', 'amazon', 'm', 'been']\n",
+      "Cluster 7: ['one', 'watches', 'than', 'more', 'they', 'other', 've', 'casio', 'timex', 'same']\n",
+      "Cluster 8: ['have', 'you', 't', 'so', 'be', 'if', 'get', 'wear', 'use', 'do']\n",
+      "Cluster 9: ['a', 'to', 'for', 'of', 'in', 'my', 'with', 'at', 'has', 'are']\n"
      ]
     }
    ],
@@ -261,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 17,
    "id": "5f443f09",
    "metadata": {
     "scrolled": false
@@ -271,29 +288,97 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(30, 4187, 300)\n",
+      "[[[ 0.          0.          0.         ...  0.          0.\n",
+      "    0.        ]\n",
+      "  [ 0.          0.          0.         ...  0.          0.\n",
+      "    0.        ]\n",
+      "  [ 0.          0.          0.         ...  0.          0.\n",
+      "    0.        ]\n",
+      "  ...\n",
+      "  [-0.13232827 -2.62986159 -0.36190996 ... -0.45965153 -1.26568198\n",
+      "    1.29691005]\n",
+      "  [-0.23795742 -0.44820398  0.56489909 ...  0.51551569 -0.61315298\n",
+      "    0.22358017]\n",
+      "  [-0.8630321  -0.01265488 -0.0185978  ...  0.09963396 -1.32533157\n",
+      "   -0.682262  ]]\n",
+      "\n",
+      " [[ 0.          0.          0.         ...  0.          0.\n",
+      "    0.        ]\n",
+      "  [ 0.          0.          0.         ...  0.          0.\n",
+      "    0.        ]\n",
+      "  [ 0.          0.          0.         ...  0.          0.\n",
+      "    0.        ]\n",
+      "  ...\n",
+      "  [ 0.22711904 -0.1230227  -1.40985775 ... -1.84888208 -0.56577241\n",
+      "   -0.44517368]\n",
+      "  [ 1.72474003 -1.50331306  0.00616959 ... -0.04561142 -0.83204603\n",
+      "   -0.83100051]\n",
+      "  [-0.07290153 -0.98932672 -1.06557715 ... -0.29010141 -0.02782034\n",
+      "    1.73782802]]\n",
+      "\n",
+      " [[ 0.          0.          0.         ...  0.          0.\n",
+      "    0.        ]\n",
+      "  [ 0.          0.          0.         ...  0.          0.\n",
+      "    0.        ]\n",
+      "  [ 0.          0.          0.         ...  0.          0.\n",
+      "    0.        ]\n",
+      "  ...\n",
+      "  [ 1.64291346 -0.93843943 -0.56744242 ...  0.64132816  0.84388262\n",
+      "    1.12729323]\n",
+      "  [ 0.73933017 -1.10777295 -0.43949598 ...  0.27794001 -0.33058295\n",
+      "    0.12744553]\n",
+      "  [ 0.12128828 -1.02952194  0.18177339 ...  0.68393809 -0.12274647\n",
+      "    0.41689521]]\n",
+      "\n",
+      " ...\n",
+      "\n",
+      " [[ 0.          0.          0.         ...  0.          0.\n",
+      "    0.        ]\n",
+      "  [ 0.          0.          0.         ...  0.          0.\n",
+      "    0.        ]\n",
+      "  [ 0.          0.          0.         ...  0.          0.\n",
+      "    0.        ]\n",
+      "  ...\n",
+      "  [ 0.0369461  -1.11359406 -0.29090518 ...  0.72186613 -0.24225178\n",
+      "    0.31094098]\n",
+      "  [-0.79989535  0.193414    0.59103191 ... -0.90483284 -0.80743062\n",
+      "   -0.52726936]\n",
+      "  [-0.28017944  0.47059047 -0.59453976 ...  0.60370368  0.08828453\n",
+      "   -0.91747797]]\n",
+      "\n",
+      " [[ 0.          0.          0.         ...  0.          0.\n",
+      "    0.        ]\n",
+      "  [ 0.          0.          0.         ...  0.          0.\n",
+      "    0.        ]\n",
+      "  [ 0.          0.          0.         ...  0.          0.\n",
+      "    0.        ]\n",
+      "  ...\n",
+      "  [-0.7658698   1.28146458  0.71371716 ... -0.50677824 -0.73090428\n",
+      "    1.10760605]\n",
+      "  [-0.19619924  0.22561814 -0.13484228 ...  1.60139525 -0.82567728\n",
+      "    0.16644004]\n",
+      "  [ 0.11306988  1.01699579 -0.54043728 ... -1.51561427  0.63426781\n",
+      "   -0.77011496]]\n",
+      "\n",
+      " [[ 0.          0.          0.         ...  0.          0.\n",
+      "    0.        ]\n",
+      "  [ 0.          0.          0.         ...  0.          0.\n",
+      "    0.        ]\n",
+      "  [ 0.          0.          0.         ...  0.          0.\n",
+      "    0.        ]\n",
+      "  ...\n",
+      "  [ 0.0369461  -1.11359406 -0.29090518 ...  0.72186613 -0.24225178\n",
+      "    0.31094098]\n",
+      "  [-0.0646755   1.02862823 -0.48581174 ... -1.18086827  0.66837066\n",
+      "   -0.59724694]\n",
+      "  [ 0.4674167  -0.18189096 -1.76218379 ... -0.72779119  0.9427129\n",
+      "   -1.49928212]]]\n",
       "(2, 2, 300)\n",
       "(2, 5)\n",
-      "1/1 [==============================] - 2s 2s/step - loss: 0.7268 - accuracy: 0.0000e+00\n",
+      "1/1 [==============================] - 1s 1s/step - loss: 0.7125 - accuracy: 0.0000e+00\n",
       "Layer 0: (None, 2, 300), (None, 52)\n",
       "Layer 1: (None, 52), (None, 5)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-03-24 02:54:20.884995: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
-      "\n",
-      "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n",
-      "2023-03-24 02:54:20.953456: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
-      "\n",
-      "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n",
-      "2023-03-24 02:54:20.953735: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
-      "\n",
-      "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n",
-      "2023-03-24 02:54:20.954013: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
-      "\n",
-      "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n"
      ]
     }
    ],
@@ -310,7 +395,7 @@
     "# f: Nºof feature per time-step\n",
     "# Note: input_shape=(t,f)\n",
     "# @ref https://stackoverflow.com/a/62994263/9178470\n",
-    "vector_processor = Bidirectional(LSTM(HIDDEN_DIM // 2, return_sequences=False),\n",
+    "vector_processor = Bidirectional(LSTM(INPUT_HIDDEN_DIM // 2, return_sequences=False),\n",
     "                        input_shape=(inputs.shape[-2], inputs.shape[-1]),\n",
     "                        merge_mode='concat') # concat will return n X t X <HIDDEN_DIM/2>*2 # TODO why *2 and not *<nº of LSTM>?\n",
     "model.add(vector_processor)\n",
@@ -318,9 +403,10 @@
     "#model.add(Activation('softmax'))\n",
     "model.compile(optimizer='sgd', loss='binary_crossentropy', metrics=['accuracy'])\n",
     "\n",
-    "X = np.stack(( np.stack((word_vectors.vectors[0], word_vectors.vectors[1])),\n",
-    "             np.stack((word_vectors.vectors[3], word_vectors.vectors[4])) )) # example of phrases (<num inputs>x<max words of review>x<vector size>)\n",
-    "y = np.stack(( np.array([0,0,0,0,1]), np.array([0,1,0,0,0]) )) # score 5 and 2\n",
+    "review_generator = SaHandler.padded_reviews(word2vec_model, 30)\n",
+    "train = next(review_generator)\n",
+    "X = train[0]\n",
+    "y = train[1]\n",
     "print(X.shape)\n",
     "print(y.shape)\n",
     "model.fit(X, y, epochs=1, batch_size=32)\n",
