--- a/Lab.ipynb
+++ b/Lab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "5b179ce6",
    "metadata": {
     "scrolled": false
@@ -30,12 +30,12 @@
     "import matplotlib.pyplot as plt # plot\n",
     "import matplotlib.gridspec as gridspec\n",
     "\n",
-    "from typing import Dict,Any,List,Generator"
+    "from typing import Dict,Any,List,Generator,Tuple"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "id": "1c523f73",
    "metadata": {},
    "outputs": [],
@@ -63,25 +63,30 @@
     "        @param vectorizer      Word2Vec object to convert from word to vector\n",
     "        @param batch_size      Number of reviews each returned ndarray has. Use -1 if use all the reviews.\n",
     "        @param iterate_forever If True, it will iterate indefinitely\n",
-    "        @return Generator of ndarray of size (<batch_size>,<max words in review>,<Word2Vec return vector lenght>).\n",
+    "        @return Generator of ndarray of size (<batch_size>,<max words in review>,<Word2Vec return vector lenght>),\n",
+    "                and its expected value (<batch_size>,5)\n",
     "        \"\"\"\n",
     "        vector_size = vectorizer.wv[0].shape\n",
-    "        reviews = self.review_sentences\n",
+    "        reviews = [x['text'] for x in self._reviews]\n",
+    "        y_reviews = [int(x['score']) for x in self._reviews]\n",
     "        largest_review_size = self.largest_review_size\n",
     "        if batch_size == -1: batch_size = len(reviews)\n",
     "        \n",
     "        offset = 0\n",
     "        while True:\n",
     "            reviews_slice = reviews[offset*batch_size:(offset+1)*batch_size]\n",
+    "            y_reviews_slice = y_reviews[offset*batch_size:(offset+1)*batch_size]\n",
     "            r = np.zeros(shape=( len(reviews_slice),largest_review_size,vector_size[-1] ))\n",
-    "            print(r.shape)\n",
+    "            y = np.zeros(shape=( len(reviews_slice),5 ))\n",
+    "            \n",
     "            for review_index,review in enumerate(reviews_slice):\n",
     "                review_offset = largest_review_size-len(review) # will help with the padding\n",
     "                for word_index,word in enumerate(review):\n",
     "                    if word in vectorizer.wv: # if not, leave it as 0\n",
     "                        r[review_index,review_offset+word_index,:] = vectorizer.wv[word]\n",
+    "                y[review_index,y_reviews_slice[review_index]-1] = 1 # the index is from 1 to 5\n",
     "            \n",
-    "            yield r\n",
+    "            yield (r,y)\n",
     "            \n",
     "            offset += 1\n",
     "            if offset >= len(reviews):\n",
@@ -140,6 +145,7 @@
     "# global variables\n",
     "WORD2VEC_VECTOR_SIZE = 300\n",
     "INPUT_HIDDEN_DIM = 52 # must be a power of 2\n",
+    "BAT\n",
     "\n",
     "# create an inscance of the class\n",
     "SaHandler=SentimentAnalysis('data/Watches_withstopwords.json.gz', random_state=1)"
@@ -278,10 +284,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "id": "5f443f09",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -289,95 +295,9 @@
      "output_type": "stream",
      "text": [
       "(30, 4187, 300)\n",
-      "[[[ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  ...\n",
-      "  [-0.13232827 -2.62986159 -0.36190996 ... -0.45965153 -1.26568198\n",
-      "    1.29691005]\n",
-      "  [-0.23795742 -0.44820398  0.56489909 ...  0.51551569 -0.61315298\n",
-      "    0.22358017]\n",
-      "  [-0.8630321  -0.01265488 -0.0185978  ...  0.09963396 -1.32533157\n",
-      "   -0.682262  ]]\n",
-      "\n",
-      " [[ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  ...\n",
-      "  [ 0.22711904 -0.1230227  -1.40985775 ... -1.84888208 -0.56577241\n",
-      "   -0.44517368]\n",
-      "  [ 1.72474003 -1.50331306  0.00616959 ... -0.04561142 -0.83204603\n",
-      "   -0.83100051]\n",
-      "  [-0.07290153 -0.98932672 -1.06557715 ... -0.29010141 -0.02782034\n",
-      "    1.73782802]]\n",
-      "\n",
-      " [[ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  ...\n",
-      "  [ 1.64291346 -0.93843943 -0.56744242 ...  0.64132816  0.84388262\n",
-      "    1.12729323]\n",
-      "  [ 0.73933017 -1.10777295 -0.43949598 ...  0.27794001 -0.33058295\n",
-      "    0.12744553]\n",
-      "  [ 0.12128828 -1.02952194  0.18177339 ...  0.68393809 -0.12274647\n",
-      "    0.41689521]]\n",
-      "\n",
-      " ...\n",
-      "\n",
-      " [[ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  ...\n",
-      "  [ 0.0369461  -1.11359406 -0.29090518 ...  0.72186613 -0.24225178\n",
-      "    0.31094098]\n",
-      "  [-0.79989535  0.193414    0.59103191 ... -0.90483284 -0.80743062\n",
-      "   -0.52726936]\n",
-      "  [-0.28017944  0.47059047 -0.59453976 ...  0.60370368  0.08828453\n",
-      "   -0.91747797]]\n",
-      "\n",
-      " [[ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  ...\n",
-      "  [-0.7658698   1.28146458  0.71371716 ... -0.50677824 -0.73090428\n",
-      "    1.10760605]\n",
-      "  [-0.19619924  0.22561814 -0.13484228 ...  1.60139525 -0.82567728\n",
-      "    0.16644004]\n",
-      "  [ 0.11306988  1.01699579 -0.54043728 ... -1.51561427  0.63426781\n",
-      "   -0.77011496]]\n",
-      "\n",
-      " [[ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  ...\n",
-      "  [ 0.0369461  -1.11359406 -0.29090518 ...  0.72186613 -0.24225178\n",
-      "    0.31094098]\n",
-      "  [-0.0646755   1.02862823 -0.48581174 ... -1.18086827  0.66837066\n",
-      "   -0.59724694]\n",
-      "  [ 0.4674167  -0.18189096 -1.76218379 ... -0.72779119  0.9427129\n",
-      "   -1.49928212]]]\n",
-      "(2, 2, 300)\n",
-      "(2, 5)\n",
-      "1/1 [==============================] - 1s 1s/step - loss: 0.7125 - accuracy: 0.0000e+00\n",
-      "Layer 0: (None, 2, 300), (None, 52)\n",
+      "(30, 5)\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 0.7261 - accuracy: 0.0667\n",
+      "Layer 0: (None, 4187, 300), (None, 52)\n",
       "Layer 1: (None, 52), (None, 5)\n"
      ]
     }
@@ -386,7 +306,7 @@
     "# TODO Average of Word2Vec vectors with TF-IDF : this is one of the best approach which I will recommend. Just take the word vectors and multiply it with their TF-IDF scores. Just take the average and it will represent your sentence vector.\n",
     "# @ref https://stackoverflow.com/a/31738627/9178470\n",
     "\n",
-    "inputs = tf.keras.Input(shape=(None, 2, 300))\n",
+    "inputs = tf.keras.Input(shape=(None, SaHandler.largest_review_size, WORD2VEC_VECTOR_SIZE))\n",
     "\n",
     "model = Sequential()\n",
     "# Assuming that your input size (X.shape) is n X t X f where\n",
