--- a/Lab.ipynb
+++ b/Lab.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 48,
    "id": "1c523f73",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,8 @@
     "# global variables\n",
     "WORD2VEC_VECTOR_SIZE = 300\n",
     "INPUT_HIDDEN_DIM = 52 # must be a power of 2\n",
-    "BAT\n",
+    "BATCH_SIZE = 128\n",
+    "EPOCHS = 3\n",
     "\n",
     "# create an inscance of the class\n",
     "SaHandler=SentimentAnalysis('data/Watches_withstopwords.json.gz', random_state=1)"
@@ -240,7 +241,7 @@
    "execution_count": 6,
    "id": "9fa41da8",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -284,27 +285,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "5f443f09",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(30, 4187, 300)\n",
-      "(30, 5)\n",
-      "1/1 [==============================] - 2s 2s/step - loss: 0.7261 - accuracy: 0.0667\n",
-      "Layer 0: (None, 4187, 300), (None, 52)\n",
-      "Layer 1: (None, 52), (None, 5)\n"
+      "(128, 4187, 300)\n",
+      "(128, 5)\n",
+      "Epoch 1/3\n",
+      "374/374 [==============================] - 143s 377ms/step - loss: 0.5560 - accuracy: 0.5121\n",
+      "Epoch 2/3\n",
+      "374/374 [==============================] - 138s 368ms/step - loss: 0.4297 - accuracy: 0.5735\n",
+      "Epoch 3/3\n",
+      "152/374 [===========>..................] - ETA: 1:22 - loss: 0.4077 - accuracy: 0.5676"
      ]
     }
    ],
    "source": [
-    "# TODO Average of Word2Vec vectors with TF-IDF : this is one of the best approach which I will recommend. Just take the word vectors and multiply it with their TF-IDF scores. Just take the average and it will represent your sentence vector.\n",
-    "# @ref https://stackoverflow.com/a/31738627/9178470\n",
+    "# @ref https://www.tensorflow.org/api_docs/python/tf/keras/utils/Sequence\n",
+    "class DataGenerator(tf.keras.utils.Sequence):\n",
+    "    def __init__(self, sa: SentimentAnalysis, word2vec_model: word2vec.Word2Vec, batch_size: int = 32):\n",
+    "        self._vector_size = word2vec_model.wv[0].shape\n",
+    "        self._reviews = [x['text'] for x in sa._reviews]\n",
+    "        self._y_reviews = [int(x['score']) for x in sa._reviews]\n",
+    "        self._largest_review_size = sa.largest_review_size\n",
+    "        self._vectorizer = word2vec_model\n",
+    "        \n",
+    "        self._generator = sa.padded_reviews(word2vec_model, batch_size)\n",
+    "        self._batch_size = batch_size\n",
+    "        self._num_batches_per_epoch = -(sa.num_reviews // -batch_size) # ceil; @ref https://stackoverflow.com/a/17511341/9178470\n",
+    "\n",
+    "    def __len__(self) -> int:\n",
+    "        return self._num_batches_per_epoch\n",
+    "\n",
+    "    def __getitem__(self, idx: int) -> Tuple[np.ndarray,np.ndarray]:\n",
+    "        reviews_slice = self._reviews[idx*self._batch_size:(idx+1)*self._batch_size]\n",
+    "        y_reviews_slice = self._y_reviews[idx*self._batch_size:(idx+1)*self._batch_size]\n",
+    "        r = np.zeros(shape=( len(reviews_slice),self._largest_review_size,self._vector_size[-1] ))\n",
+    "        y = np.zeros(shape=( len(reviews_slice),5 ))\n",
+    "\n",
+    "        for review_index,review in enumerate(reviews_slice):\n",
+    "            review_offset = self._largest_review_size-len(review) # will help with the padding\n",
+    "            for word_index,word in enumerate(review):\n",
+    "                if word in self._vectorizer.wv: # if not, leave it as 0\n",
+    "                    r[review_index,review_offset+word_index,:] = self._vectorizer.wv[word]\n",
+    "            y[review_index,y_reviews_slice[review_index]-1] = 1 # the index is from 1 to 5\n",
+    "\n",
+    "        return (r,y)\n",
     "\n",
     "inputs = tf.keras.Input(shape=(None, SaHandler.largest_review_size, WORD2VEC_VECTOR_SIZE))\n",
     "\n",
@@ -323,13 +355,13 @@
     "#model.add(Activation('softmax'))\n",
     "model.compile(optimizer='sgd', loss='binary_crossentropy', metrics=['accuracy'])\n",
     "\n",
-    "review_generator = SaHandler.padded_reviews(word2vec_model, 30)\n",
+    "training_generator = DataGenerator(SaHandler, word2vec_model, BATCH_SIZE)\n",
     "train = next(review_generator)\n",
     "X = train[0]\n",
     "y = train[1]\n",
     "print(X.shape)\n",
     "print(y.shape)\n",
-    "model.fit(X, y, epochs=1, batch_size=32)\n",
+    "model.fit(training_generator, epochs=EPOCHS, batch_size=BATCH_SIZE)\n",
     "#model(X)\n",
     "\n",
     "for i,layer in enumerate(model.layers):\n",
