--- a/Lab.ipynb
+++ b/Lab.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "id": "1c523f73",
    "metadata": {},
    "outputs": [],
@@ -145,6 +145,7 @@
     "# global variables\n",
     "WORD2VEC_VECTOR_SIZE = 300\n",
     "INPUT_HIDDEN_DIM = 52 # must be a power of 2\n",
+    "DENSE_HIDDEN_DIM = (200,50)\n",
     "BATCH_SIZE = 128\n",
     "EPOCHS = 3\n",
     "\n",
@@ -295,14 +296,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(128, 4187, 300)\n",
-      "(128, 5)\n",
-      "Epoch 1/3\n",
-      "374/374 [==============================] - 143s 377ms/step - loss: 0.5560 - accuracy: 0.5121\n",
+      "Epoch 1/3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-03-24 11:40:01.081422: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
+      "\n",
+      "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n",
+      "2023-03-24 11:40:01.584032: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
+      "\n",
+      "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n",
+      "2023-03-24 11:40:01.618415: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
+      "\n",
+      "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n",
+      "2023-03-24 11:40:01.653945: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
+      "\n",
+      "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n",
+      "2023-03-24 11:40:01.690326: W tensorflow/compiler/xla/stream_executor/gpu/asm_compiler.cc:115] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
+      "\n",
+      "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "374/374 [==============================] - 138s 362ms/step - loss: 0.4809 - accuracy: 0.5561\n",
       "Epoch 2/3\n",
-      "374/374 [==============================] - 138s 368ms/step - loss: 0.4297 - accuracy: 0.5735\n",
+      "374/374 [==============================] - 135s 360ms/step - loss: 0.3976 - accuracy: 0.5739\n",
       "Epoch 3/3\n",
-      "152/374 [===========>..................] - ETA: 1:22 - loss: 0.4077 - accuracy: 0.5676"
+      "366/374 [============================>.] - ETA: 2s - loss: 0.3938 - accuracy: 0.5727"
      ]
     }
    ],
@@ -351,6 +377,8 @@
     "                        input_shape=(inputs.shape[-2], inputs.shape[-1]),\n",
     "                        merge_mode='concat') # concat will return n X t X <HIDDEN_DIM/2>*2 # TODO why *2 and not *<nº of LSTM>?\n",
     "model.add(vector_processor)\n",
+    "for hidden_dense in DENSE_HIDDEN_DIM:\n",
+    "    model.add(Dense(hidden_dense))\n",
     "model.add(Dense(5, activation='softmax'))\n",
     "#model.add(Activation('softmax'))\n",
     "model.compile(optimizer='sgd', loss='binary_crossentropy', metrics=['accuracy'])\n",
@@ -359,11 +387,10 @@
     "train = next(review_generator)\n",
     "X = train[0]\n",
     "y = train[1]\n",
+    "model.fit(training_generator, epochs=EPOCHS, batch_size=BATCH_SIZE)\n",
+    "\n",
     "print(X.shape)\n",
     "print(y.shape)\n",
-    "model.fit(training_generator, epochs=EPOCHS, batch_size=BATCH_SIZE)\n",
-    "#model(X)\n",
-    "\n",
     "for i,layer in enumerate(model.layers):\n",
     "    print(f\"Layer {i}: {layer.input_shape}, {layer.output_shape}\")\n"
    ]
