Feature: generate the DNN input with averaging word2vec*Tfid

--- a/Lab.ipynb
+++ b/Lab.ipynb
@@ -319,7 +319,6 @@
     "        self._largest_review_size = sa.largest_review_size\n",
     "        self._vectorizer = word2vec_model\n",
     "        \n",
-    "        self._generator = sa.padded_reviews(word2vec_model, batch_size)\n",
     "        self._batch_size = batch_size\n",
     "        self._num_batches_per_epoch = -(sa.num_reviews // -batch_size) # ceil; @ref https://stackoverflow.com/a/17511341/9178470\n",
     "\n",
@@ -379,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "2d8c0e48",
    "metadata": {},
    "outputs": [
@@ -390,17 +389,6 @@
       "['00' '000' '0000' ... 'zwitzerland' 'zxc' 'zzzffth']\n",
       "(47849, 42034)\n"
      ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'zip' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[18], line 31\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m word \u001b[38;5;129;01min\u001b[39;00m review[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m'\u001b[39m]:\n\u001b[1;32m     30\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m word \u001b[38;5;129;01min\u001b[39;00m word_to_index: \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[0;32m---> 31\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mword\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mword_to_index[word]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m): \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtfidf_scores[word_to_index[word]]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     33\u001b[0m \u001b[38;5;66;03m#review['text'], int(review['score'])\u001b[39;00m\n\u001b[1;32m     34\u001b[0m \u001b[38;5;28;01mbreak\u001b[39;00m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'zip' object is not subscriptable"
-     ]
     }
    ],
    "source": [
@@ -408,39 +396,68 @@
     "counts=count_vectorizer.fit_transform([' '.join(x) for x in SaHandler.review_sentences])\n",
     "print(count_vectorizer.get_feature_names_out())\n",
     "\n",
-    "def get_count_vectorizer_index(searching: str) -> int:\n",
-    "    r = np.where(count_vectorizer.get_feature_names_out() == searching)\n",
-    "    if len(r[0]) == 0:\n",
-    "        return None\n",
-    "    return r[0][0]\n",
-    "\n",
     "transformer = TfidfTransformer()\n",
     "BoW=transformer.fit_transform(counts)\n",
     "BoW_train=BoW[:len(SaHandler.reviews),:]\n",
     "\n",
     "print(BoW_train.shape) # we'll have a vector of size <nº train data> x <nº of different words>, with the value representing the weight of that word\n",
     "\n",
+    "class TfidDataGenerator(tf.keras.utils.Sequence):\n",
+    "    def __init__(self, sa: SentimentAnalysis, word2vec_model: word2vec.Word2Vec, count_vectorizer: CountVectorizer, BoW: np.ndarray, batch_size: int = 32):\n",
+    "        self._vector_size = word2vec_model.wv[0].shape\n",
+    "        self._reviews = [x['text'] for x in sa.reviews]\n",
+    "        self._y_reviews = [int(x['score']) for x in sa.reviews]\n",
+    "        self._vectorizer = word2vec_model\n",
+    "        self._count_vectorizer = count_vectorizer\n",
+    "        self._tfid = BoW\n",
+    "        \n",
+    "        self._batch_size = batch_size\n",
+    "        self._num_batches_per_epoch = -(sa.num_reviews // -batch_size) # ceil; @ref https://stackoverflow.com/a/17511341/9178470\n",
     "\n",
-    "for BoW_train_index, review in enumerate(SaHandler._reviews):\n",
-    "    word_to_index = {}\n",
-    "    for word in review['text']:\n",
-    "        index = get_count_vectorizer_index(word)\n",
-    "        if index is not None:\n",
-    "            word_to_index[word] = index\n",
+    "        \n",
+    "    def _get_count_vectorizer_index(self, searching: str) -> int:\n",
+    "        r = np.where(self._count_vectorizer.get_feature_names_out() == searching)\n",
+    "        if len(r[0]) == 0:\n",
+    "            return None\n",
+    "        return r[0][0]\n",
+    "        \n",
+    "    def __len__(self) -> int:\n",
+    "        return self._num_batches_per_epoch\n",
+    "\n",
+    "    def __getitem__(self, idx: int) -> Tuple[np.ndarray,np.ndarray]:\n",
+    "        offset = idx*self._batch_size\n",
+    "        reviews_slice = self._reviews[offset:offset+self._batch_size]\n",
+    "        y_reviews_slice = self._y_reviews[idx*self._batch_size:(idx+1)*self._batch_size]\n",
+    "        r = np.zeros(shape=( len(reviews_slice),self._vector_size[-1] ))\n",
+    "        y = np.zeros(shape=( len(reviews_slice),5 ))\n",
+    "\n",
+    "        for review_index,review in enumerate(reviews_slice):\n",
+    "            BoW_train_index = review_index + offset\n",
     "            \n",
-    "    feature_index = BoW_train[BoW_train_index,:].nonzero()[1] # @ref https://stackoverflow.com/a/38770335/9178470\n",
+    "            word_to_index = {}\n",
+    "            for word in review:\n",
+    "                index = self._get_count_vectorizer_index(word)\n",
+    "                if index is not None:\n",
+    "                    word_to_index[word] = index\n",
+    "\n",
+    "            feature_index = self._tfid[BoW_train_index,:].nonzero()[1] # @ref https://stackoverflow.com/a/38770335/9178470\n",
+    "\n",
+    "            id_to_score = {}\n",
+    "            for index in feature_index:\n",
+    "                id_to_score[index] = self._tfid[BoW_train_index, index]\n",
+    "\n",
+    "            for word in review:\n",
+    "                # the word must be inside the Tfid & word2vec\n",
+    "                if not word in word_to_index: continue\n",
+    "                if not word in word2vec_model.wv: continue\n",
+    "\n",
+    "                r[review_index,:] += id_to_score[word_to_index[word]]*word2vec_model.wv[word]\n",
+    "            y[review_index,y_reviews_slice[review_index]-1] = 1 # the index is from 1 to 5\n",
+    "\n",
+    "        return (r,y)\n",
     "    \n",
-    "    id_to_score = {}\n",
-    "    for index in feature_index:\n",
-    "        id_to_score[]BoW[BoW_train_index, x]\n",
-    "    zip(feature_index, [ for x in feature_index])\n",
-    "    \n",
-    "    for word in review['text']:\n",
-    "        if not word in word_to_index: continue\n",
-    "        print(f\"{word} ({word_to_index[word]}): {tfidf_scores[word_to_index[word]]}\")\n",
-    "    \n",
-    "    #review['text'], int(review['score'])\n",
-    "    break\n"
+    "training_generator = TfidDataGenerator(SaHandler, word2vec_model, count_vectorizer, BoW_train, BATCH_SIZE)\n",
+    "print(str(training_generator.__getitem__(0)))"
    ]
   },
   {
