Feature: increased drastically the performance of the DataGenerator

--- a/Lab.ipynb
+++ b/Lab.ipynb
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "2d8c0e48",
    "metadata": {},
    "outputs": [
@@ -387,7 +387,147 @@
      "output_type": "stream",
      "text": [
       "['00' '000' '0000' ... 'zwitzerland' 'zxc' 'zzzffth']\n",
-      "(47849, 42034)\n"
+      "(47849, 42034)\n",
+      "(array([[-3.32631258, -5.55271238,  6.2775308 , ..., -3.17747712,\n",
+      "         3.44877042,  0.79644831],\n",
+      "       [-1.56142309, -2.41208483,  0.74176592, ..., -2.47067718,\n",
+      "         4.29040974, -1.76196027],\n",
+      "       [-0.92613569, -0.83615992,  0.4014748 , ..., -2.79122744,\n",
+      "         1.91431209, -0.40916161],\n",
+      "       ...,\n",
+      "       [-3.59392226, -1.50934326, -0.62641591, ..., -1.41303362,\n",
+      "         3.55613283, -2.80613489],\n",
+      "       [-1.00321532,  1.29455152, -1.93577537, ..., -0.96494052,\n",
+      "         3.07945238, -0.94415659],\n",
+      "       [-0.05796631, -1.27661649,  0.1559143 , ...,  0.02298158,\n",
+      "        -0.08620405,  0.49668088]]), array([[0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 1., 0., 0.],\n",
+      "       [0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 1., 0., 0., 0.],\n",
+      "       [0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 1., 0., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [1., 0., 0., 0., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 1., 0., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 1., 0., 0.],\n",
+      "       [0., 1., 0., 0., 0.],\n",
+      "       [1., 0., 0., 0., 0.],\n",
+      "       [0., 0., 1., 0., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 1., 0., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 1., 0., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 1., 0., 0., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 0., 1.],\n",
+      "       [0., 0., 0., 1., 0.],\n",
+      "       [0., 0., 0., 0., 1.]]))\n"
      ]
     }
    ],
@@ -413,8 +553,11 @@
     "        \n",
     "        self._batch_size = batch_size\n",
     "        self._num_batches_per_epoch = -(sa.num_reviews // -batch_size) # ceil; @ref https://stackoverflow.com/a/17511341/9178470\n",
-    "\n",
     "        \n",
+    "        self._word_to_index = {}\n",
+    "        for index, word in enumerate(self._count_vectorizer.get_feature_names_out()):\n",
+    "            self._word_to_index[word] = index\n",
+    "\n",
     "    def _get_count_vectorizer_index(self, searching: str) -> int:\n",
     "        r = np.where(self._count_vectorizer.get_feature_names_out() == searching)\n",
     "        if len(r[0]) == 0:\n",
@@ -433,25 +576,15 @@
     "\n",
     "        for review_index,review in enumerate(reviews_slice):\n",
     "            BoW_train_index = review_index + offset\n",
-    "            \n",
-    "            word_to_index = {}\n",
-    "            for word in review:\n",
-    "                index = self._get_count_vectorizer_index(word)\n",
-    "                if index is not None:\n",
-    "                    word_to_index[word] = index\n",
     "\n",
     "            feature_index = self._tfid[BoW_train_index,:].nonzero()[1] # @ref https://stackoverflow.com/a/38770335/9178470\n",
     "\n",
-    "            id_to_score = {}\n",
-    "            for index in feature_index:\n",
-    "                id_to_score[index] = self._tfid[BoW_train_index, index]\n",
-    "\n",
     "            for word in review:\n",
     "                # the word must be inside the Tfid & word2vec\n",
-    "                if not word in word_to_index: continue\n",
+    "                if not word in self._word_to_index: continue\n",
     "                if not word in word2vec_model.wv: continue\n",
     "\n",
-    "                r[review_index,:] += id_to_score[word_to_index[word]]*word2vec_model.wv[word]\n",
+    "                r[review_index,:] += self._tfid[BoW_train_index, self._word_to_index[word]]*word2vec_model.wv[word]\n",
     "            y[review_index,y_reviews_slice[review_index]-1] = 1 # the index is from 1 to 5\n",
     "\n",
     "        return (r,y)\n",
@@ -459,6 +592,16 @@
     "training_generator = TfidDataGenerator(SaHandler, word2vec_model, count_vectorizer, BoW_train, BATCH_SIZE)\n",
     "print(str(training_generator.__getitem__(0)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e2b426e",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
